--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -11,10 +11,12 @@
     text-decoration: none;
     font-weight: normal;
 }
-html{
+
+html {
     font-size: 59.5%;
 }
-body{
+
+body {
     min-height: 100vh;
     display: flex;
     align-items: flex-start;
@@ -23,93 +25,108 @@ body{
     padding: 5.5rem;
     gap: 10px;
 }
-section{
+
+section {
     padding: 1rem 7%;
     min-height: 100%;
 }
-.btn{
+
+.btn {
     font-size: 2rem;
     padding: .7rem 4rem;
-    background: rgba(255,255,255,.2);
+    background: rgba(255, 255, 255, .2);
     color: #fff;
     border-radius: 1rem;
-    box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
     margin-top: 1rem;
     cursor: pointer;
 }
-.btn:hover{
-    background: rgba(255,255,255,.5);
+
+.btn:hover {
+    background: rgba(255, 255, 255, .5);
     color: #555;
     transition: all .2s linear;
 }
-.heading{
+
+.heading {
     font-size: 3rem;
     text-align: center;
     padding: 1rem;
     color: #fff;
 }
-header{
+
+header {
     width: 35rem;
-    background: rgba(255,255,255,.2);
-    box-shadow: 0 1rem 2rem rgba(0,0,0,.3);
+    background: rgba(255, 255, 255, .2);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .3);
     backdrop-filter: blur(.4rem);
     text-align: center;
     padding: 1rem;
     border-radius: 1rem;
 }
-header .user{
+
+header .user {
     padding-top: 2rem;
 }
-header .user img{
+
+header .user img {
     margin: 1rem 0;
     height: 15rem;
     width: 15rem;
     border-radius: 50%;
     object-fit: cover;
-    box-shadow: 0,0,0,1rem rgba(255,255,255,.2);
+    box-shadow: 0, 0, 0, 1rem rgba(255, 255, 255, .2);
 }
-header .user .name{
+
+header .user .name {
     font-size: 3rem;
     color: #fff;
     padding: .5rem 0;
 }
-header .user .post{
+
+header .user .post {
     font-size: 1.8rem;
     color: #eee;
     font-weight: lighter;
 }
-header .navbar{
+
+header .navbar {
     padding: 1rem 3rem;
 }
-header .navbar ul li{
+
+header .navbar ul li {
     margin: 1rem 0;
     list-style: none;
 }
-header .navbar ul li a{
+
+header .navbar ul li a {
     display: block;
     padding: 1rem;
     font-size: 2rem;
     color: #fff;
-    background: rgba(255,255,255,.2);
-    box-shadow: 0,0,0,1rem rgba(255,255,255,.2);
+    background: rgba(255, 255, 255, .2);
+    box-shadow: 0, 0, 0, 1rem rgba(255, 255, 255, .2);
     border-radius: 1rem;
     transition: all .2s linear;
 }
-header .navbar ul li a:hover{
+
+header .navbar ul li a:hover {
     color: #555;
-    background: rgba(255,255,255,.5);
+    background: rgba(255, 255, 255, .5);
     transition: none;
 }
-.container{
+
+.container {
     width: 80rem;
     height: 60rem;
-    background: rgba(255,255,255,.2);
-    box-shadow: 0 1rem 2rem rgba(0,0,0,.3);
+    background: rgba(255, 255, 255, .2);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .3);
     backdrop-filter: blur(.4rem);
     border-radius: 1rem;
     overflow: hidden;
 }
-.home{
+
+.home {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -117,23 +134,28 @@ header .navbar ul li a:hover{
     position: relative;
     padding-bottom: 10rem;
 }
-.home h3{
+
+.home h3 {
     font-size: 2.5rem;
     font-weight: lighter;
     columns: #eee;
 }
-.home .name span{
+
+.home .name span {
     font-size: 4rem;
     color: #fff;
 }
-.home .post{
+
+.home .post {
     padding: 1rem 0;
 }
-.home .post span{
+
+.home .post span {
     font-size: 3rem;
     color: #fff;
 }
-.home .share{
+
+.home .share {
     position: absolute;
     left: 50%;
     bottom: 5rem;
@@ -141,229 +163,296 @@ header .navbar ul li a:hover{
     display: flex;
     padding: 1rem;
     border-radius: 1rem;
-    background: rgba(255,255,255,.1);
-    box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
+    background: rgba(255, 255, 255, .1);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
     transition: .2s linear;
     margin-bottom: 5rem;
 }
-.home .share a{
-    background: rgba(255,255,255,.2);
-    box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
+
+.home .share a {
+    background: rgba(255, 255, 255, .2);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
     padding: 1rem 2rem;
     margin: 1rem;
     color: #fff;
     font-size: 2rem;
     border-radius: 1rem;
 }
-.home .share a:hover{
-    background: rgba(255,255,255,.5);
-    box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
+
+.home .share a:hover {
+    background: rgba(255, 255, 255, .5);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
     padding: 1rem 2rem;
     margin: 1rem;
     color: #555;
     font-size: 2rem;
 }
-.about .content h3{
+
+.about .content h3 {
     font-size: 2.5rem;
     color: #eee;
 }
-.about .content h3 span{
+
+.about .content h3 span {
     color: #fff;
 }
-.about .content p{
+
+.about .content p {
     font-size: 1.5rem;
     color: #eee;
     padding: .5rem 0;
 }
-.about .skills{
+
+.about .skills {
     padding: 1rem 0;
 }
-.about .skills .progress{
+
+.about .skills .progress {
     margin: 1.5rem 0;
     padding: 1rem;
-    box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
-    background: rgba(255,255,255,.2);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
+    background: rgba(255, 255, 255, .2);
     border-radius: 1rem;
 }
-.about .skills .progress h3{
+
+.about .skills .progress h3 {
     display: flex;
     justify-content: space-between;
     font-size: 2rem;
     color: #fff;
 }
-.about .skills .progress .bar{
+
+.about .skills .progress .bar {
     position: relative;
     width: 100%;
     height: .3rem;
     margin: 1rem 0;
     background: #555;
 }
-.about .skills .progress .bar span{
+
+.about .skills .progress .bar span {
     position: absolute;
-    top: 0; left: 0;
+    top: 0;
+    left: 0;
     height: 100%;
     width: 100%;
     background: #fff;
 }
-.about .skills .progress:nth-child(1) .bar span{
+
+.about .skills .progress:nth-child(1) .bar span {
     width: 95%;
 }
-.about .skills .progress:nth-child(2) .bar span{
+
+.about .skills .progress:nth-child(2) .bar span {
     width: 85%;
 }
-.about .skills .progress:nth-child(3) .bar span{
+
+.about .skills .progress:nth-child(3) .bar span {
     width: 60%;
 }
-.about .skills .progress:nth-child(4) .bar span{
+
+.about .skills .progress:nth-child(4) .bar span {
     width: 80%;
 }
-.services .box-container{
+
+.services .box-container {
     padding: 2rem 0;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
 }
-.services .box-container .box{
-    margin: 1rem;
+
+.services .box-container .box {
+    margin: 1rem auto;
     padding: 1rem;
     border-radius: 1rem;
-    box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
-    background: rgba(255,255,255,.2);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
+    background: rgba(255, 255, 255, .2);
     text-align: center;
-    width: 32rem;
+    width: 23rem;
+    flex-wrap: wrap;
 }
-.services .box-container .box i{
+
+.services .box-container .box i {
     color: #fff;
     font-size: 4.5rem;
     padding: 1rem 0;
 }
-.services .box-container .box p{
+
+.services .box-container .box p {
     color: #fff;
     font-size: 1.3rem;
     padding: .5rem 0;
 }
-.education .box-container{
+
+.education .box-container {
     display: flex;
-    /* align-items: center; */
     justify-content: space-between;
     flex-wrap: wrap;
     padding: 2rem 0;
 }
-.education .box-container .box{
-    width: 30rem;
+
+.education .box-container .box {
+    width: 23rem;
     padding: 0 2rem;
     padding-bottom: 4rem;
     border-left: .2rem solid #eee;
 }
-.education .box-container .box .year{
+
+.education .box-container .box .year {
     font-size: 2rem;
     color: #eee;
     position: relative;
 }
-.education .box-container .box .year::before{
+
+.education .box-container .box .year::before {
     content: '';
     position: absolute;
-    top: .3rem; left: -3.5rem;
+    top: .3rem;
+    left: -3.5rem;
     height: 3rem;
     width: 3rem;
     border-radius: 50%;
     background: #fff;
 }
-.education .box-container .box h3{
+
+.education .box-container .box h3 {
     font-size: 2rem;
     color: #fff;
     padding-top: 1rem;
 
 }
-.education .box-container .box p{
+
+.education .box-container .box p {
     font-size: 1.3rem;
     color: #eee;
     padding: 1rem 0;
 }
-.contact .row{
+
+.contact .row {
     display: flex;
     justify-content: space-between;
     padding-top: 7rem;
     align-items: center;
 }
-.contact .row form{    
-    background: rgba(255,255,255,.1);
-    box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
+
+.contact .row form {
+    background: rgba(255, 255, 255, .1);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
     border-radius: 1rem;
     display: flex;
     justify-content: space-between;
     padding: 1rem 2rem;
     flex-wrap: wrap;
 }
-.contact .row form .box{
-    background: rgba(255,255,255,.1);
-    box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
+
+.contact .row form .box {
+    background: rgba(255, 255, 255, .1);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
     border-radius: 1rem;
     padding: 0 1rem;
-    margin: 1rem 0;
+    margin: 0.5rem 0;
     height: 4rem;
-    width: 49%;
+    width: 98%;
     font-size: 1.7rem;
     color: #fff;
     text-transform: none;
 }
-.contact .row form .box::placeholder{
+
+.contact .row form .box::placeholder {
     text-transform: capitalize;
     color: #eee;
 }
-.contact .row form .message{
+
+.contact .row form .message {
     padding: 1rem;
     height: 15rem;
     resize: none;
     width: 100%;
 }
-.contact .row form .btn{
+
+.contact .row form .btn {
     margin-bottom: 1rem;
 }
-.contact .row .content{
+
+.contact .row .content {
     padding: 0 5rem;
 }
-.contact .row .content .icons{
+
+.contact .row .content .icons {
     padding: 1rem 0;
 }
-.contact .row .content .icons h3{
+
+.contact .row .content .icons h3 {
     padding: 1rem 0;
     font-size: 2rem;
     color: #fff;
     display: flex;
 }
-.contact .row .content .icons h3 i{
+
+.contact .row .content .icons h3 i {
     padding-right: .5rem;
 }
-.contact .row .content .icons p{
+
+.contact .row .content .icons p {
     font-size: 1.5rem;
     color: #eee;
 }
-.theme-toggler{
-    background: rgba(0,0,0,.2);
-    box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
+
+.theme-toggler {
+    background: rgba(0, 0, 0, .2);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
     border-radius: 1rem;
     backdrop-filter: blur(.4rem);
 }
-.theme-toggler span{
+
+.theme-toggler span {
     display: block;
     height: 3rem;
     width: 3rem;
     border-radius: 50%;
     cursor: pointer;
     margin: 2rem 2.5rem;
-    box-shadow: 0 0 0 .5rem rgba(255,255,255,.2),
-                0 1rem 2rem rgba(0,0,0,.4);
+    box-shadow: 0 0 0 .5rem rgba(255, 255, 255, .2),
+        0 1rem 2rem rgba(0, 0, 0, .4);
 }
 
 @media only screen and (max-width:900px) {
-    body{
+    body {
         flex-direction: column;
     }
-    .container{
+
+    .container {
         width: 100%;
+        height: 90rem;
     }
-    .share{
-        width: 100%;
+
+    .home {
+        padding-top: 10rem;
+        margin-top: 0rem;
+        padding-bottom: 10rem;
+        justify-content: flex-start;
     }
+
+    .share {
+        width: 90%;
+        flex-direction: column;
+        margin-bottom: 0rem;
+    }
+
+    .contact .row {
+        flex-direction: column;
+    }
+
+    .theme-toggler {
+        backdrop-filter: blur(.4rem);
+        display: flex;
+        gap: 0;
+        margin: auto;
+    }
+
+    .theme-toggler span {
+        margin: 1rem;
+    }
+
 }
