--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,7 @@ header .navbar ul li a:hover {
     color: #fff;
     font-size: 2rem;
     border-radius: 1rem;
+    text-align: center;
 }
 
 .home .share a:hover {
@@ -260,6 +261,9 @@ header .navbar ul li a:hover {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin:  0 auto;
 }
 
 .services .box-container .box {
@@ -294,7 +298,7 @@ header .navbar ul li a:hover {
 
 .education .box-container .box {
     width: 23rem;
-    padding: 0 2rem;
+    padding: 0 1rem;
     padding-bottom: 4rem;
     border-left: .2rem solid #eee;
 }
@@ -420,11 +424,12 @@ header .navbar ul li a:hover {
 @media only screen and (max-width:900px) {
     body {
         flex-direction: column;
+        padding: 3rem;
+        align-items: center;
     }
-
     .container {
         width: 100%;
-        height: 90rem;
+        height: 80rem;
     }
 
     .home {
@@ -438,6 +443,10 @@ header .navbar ul li a:hover {
         width: 90%;
         flex-direction: column;
         margin-bottom: 0rem;
+    }
+    .education .box-container{
+
+        margin: 0 auto;
     }
     .education .box-container .box {
         width: 27rem;
